--- a/en/index.html
+++ b/en/index.html
@@ -129,15 +129,15 @@
                             style="padding-left:10px; padding: 8px;background-color: #121212; color: white; border-radius: 10px; border: 0.01rem solid #FFFFFF"
                             placeholder="Your email">
                         <input minlength="1" type="text" id="bep20Input" class="mx-2"
-                            style="padding-left:10px; padding: 8px;background-color: #121212; color: white; border-radius: 10px; border: 0.1px solid #FFFFFF"
+                            style="padding-left:10px; margin-top:10px;padding: 8px;background-color: #121212; color: white; border-radius: 10px; border: 0.1px solid #FFFFFF"
                             placeholder="Your wallet (Bep-20)">
-                        <button onclick="saveData()" class="btn btn-outline-warning"
-                            style="border-radius: 10px; padding: 7px;border-width: 0.01rem;margin-top: -1px;">Send</button>
+                        <button onclick="saveData()" class="btn btn-outline-warning mt-2"
+                            style="border-radius: 10px; padding: 7px;border-width: 0.01rem;margin-top: -1px; width: 62%;">Send</button>
                 </div>
             </div>
         </div>
     </div>
-    </div>
+    
 
 
     <div align="center" class="pt-5 swipe">
