--- a/ru/index.html
+++ b/ru/index.html
@@ -120,7 +120,7 @@
 
     <div align="center" class="pt-5">
         <div class="card d-sm-none"
-            style="width: 50%; background-color: #121212;border-radius: 0px 20px 00px 20px; border-color: #C79941;">
+            style="width: 90%; background-color: #121212;border-radius: 0px 20px 00px 20px; border-color: #C79941;">
             <div class="card-body">
                 <h6 align='center' style="color: white">Заполните данные и попадайте в WhiteList одним из первых!</h6>
                 <div class="djustify-content-center pt-3">
@@ -128,10 +128,10 @@
                             style="padding-left:10px; padding: 8px;background-color: #121212; color: white; border-radius: 10px; border: 0.01rem solid #FFFFFF"
                             placeholder="Ваш email">
                         <input minlength="1" type="text" id="bep20Input" class="mx-2"
-                            style="padding-left:10px; padding: 8px;background-color: #121212; color: white; border-radius: 10px; border: 0.1px solid #FFFFFF"
+                            style="padding-left:10px; padding: 8px; margin-top:10px;background-color: #121212; color: white; border-radius: 10px; border: 0.1px solid #FFFFFF"
                             placeholder="Ваш кошелек (Bep-20)">
-                        <button onclick="saveData()" class="btn btn-outline-warning"
-                            style="border-radius: 10px; padding: 7px;border-width: 0.01rem;margin-top: -1px;">Отправить</button>
+                        <button onclick="saveData()" class="btn btn-outline-warning mt-2"
+                            style="border-radius: 10px; padding: 7px;border-width: 0.01rem;margin-top: -1px; width: 62%">Отправить</button>
                 </div>
             </div>
         </div>
