--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <title>SecretX</title>
 
