--- a/index.html
+++ b/index.html
@@ -918,10 +918,6 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-
     <script>
         // Обработчик события клика на кнопках Прокрутки 1
         $(".scroll1").click(function () {
@@ -1003,6 +999,14 @@
             }
         }
 
+    </script>
+    <script>
+        function saveData() {
+            var email = document.getElementById("emailInput").value;
+            var bep20 = document.getElementById("bep20Input").value;
+
+            
+        }
     </script>
 
     <div class="mt-5 pt-4"></div>
