--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <input minlength="1" type="text" id="bep20Input" class="mx-2"
                             style="padding-left:10px; padding: 8px;background-color: #121212; color: white; border-radius: 10px; border: 0.1px solid #FFFFFF"
                             placeholder="Your wallet (Bep-20)">
-                        <button onclick="saveData()" class="btn btn-outline-warning"
+                        <button id="submitButton" class="btn btn-outline-warning"
                             style="border-radius: 10px; padding: 7px;border-width: 0.01rem;margin-top: -1px;">Send</button>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                     <input minlength="1" type="text" id="bep20Input" class="mx-2"
                         style="padding-left:10px; margin-top:10px;padding: 8px;background-color: #121212; color: white; border-radius: 10px; border: 0.1px solid #FFFFFF"
                         placeholder="Your wallet (Bep-20)">
-                    <button onclick="saveData()" class="btn btn-outline-warning mt-2"
+                    <button id="submitButton" class="btn btn-outline-warning mt-2"
                         style="border-radius: 10px; padding: 7px;border-width: 0.01rem;margin-top: -1px; width: 62%;">Send</button>
                 </div>
             </div>
