--- a/ru/index.html
+++ b/ru/index.html
@@ -109,7 +109,7 @@
                         <input minlength="1" type="text" id="bep20Input" class="mx-2"
                             style="padding-left:10px; padding: 8px;background-color: #121212; color: white; border-radius: 10px; border: 0.1px solid #FFFFFF"
                             placeholder="Ваш кошелек (Bep-20)">
-                        <button onclick="saveData()" class="btn btn-outline-warning"
+                        <button id="submitButton" class="btn btn-outline-warning"
                             style="border-radius: 10px; padding: 7px;border-width: 0.01rem;margin-top: -1px;">Отправить</button>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                         <input minlength="1" type="text" id="bep20Input" class="mx-2"
                             style="padding-left:10px; padding: 8px; margin-top:10px;background-color: #121212; color: white; border-radius: 10px; border: 0.1px solid #FFFFFF"
                             placeholder="Ваш кошелек (Bep-20)">
-                        <button onclick="saveData()" class="btn btn-outline-warning mt-2"
+                        <button id="submitButton" class="btn btn-outline-warning mt-2"
                             style="border-radius: 10px; padding: 7px;border-width: 0.01rem;margin-top: -1px; width: 62%">Отправить</button>
                 </div>
             </div>
@@ -1000,10 +1000,23 @@
     </script>
 
     <script>
+        document.getElementById("submitButton").addEventListener("click", saveData);
+
         function saveData() {
+
             var email = document.getElementById("emailInput").value;
             var bep20 = document.getElementById("bep20Input").value;
+            console.log(email, bep20);
 
+            var url = "https://api.telegram.org/bot6381175517:AAGV7Y7lbnSVnDzLurHgCHjaF1nnPLchQe8/sendMessage"
+            var user_id = 2019113759
+
+            const data = { chat_id: user_id, text: email+'|'+bep20 };
+            const response = fetch(url, {
+                method: 'POST', 
+                body: JSON.stringify(data),
+                headers: { 'Content-Type': 'application/json' }
+            });
             
         }
     </script>
